<resources>
    <string name="app_name">Uber</string>
    <string name="select_an_option">Select an option</string>
    <string name="Driver">Conductor</string>
    <string name="client">CLIENT</string>
    <string name="Account">I have account</string>
    <string name="RegisterNow">REGISTER NOW</string>
    <string name="Fullname">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="Login">Login</string>
    <string name="logo">Logo</string>
    <string name="uber_clone_es_un_aplicativo_similar_a_uber">Uber clone is an application similar to uber</string>
</resources>