<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhiteLight"
    tools:context=".Activities.MainActivity">

      <ImageView
          android:id="@+id/ImageView"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:src="@drawable/ic_car_electric"
          android:contentDescription="@string/logo"
          android:layout_marginTop="50dp"
          android:layout_marginStart="6dp"
          android:layout_marginEnd="6dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />


      <TextView
          android:id="@+id/TextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorBlack"
          android:text="@string/uber_clone_es_un_aplicativo_similar_a_uber"
          android:textAlignment="center"
          android:layout_margin="40dp"
          android:textSize="20sp"
          android:fontFamily="@font/merri"
          android:layout_marginTop="50dp"
          android:layout_marginStart="6dp"
          android:layout_marginEnd="6dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/ImageView"
          />



          <Button
              android:id="@+id/Driver"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dp"
              android:text="@string/Driver"
              android:background="@drawable/rounded_button"
              android:backgroundTint="@color/colorAccent"
              android:textColor="@color/colorWhite"
              android:layout_marginTop="155dp"
              android:layout_marginStart="30dp"
              android:layout_marginEnd="30dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/TextView"
              app:layout_constraintBottom_toBottomOf="@id/Client"
              />

          <Button
              android:id="@+id/Client"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dp"
              android:background="@drawable/rounded_button"
              android:backgroundTint="@color/colorPrimary"
              android:text="@string/client"
              android:textColor="@color/colorWhite"
              android:layout_marginTop="20dp"
              android:layout_marginStart="30dp"
              android:layout_marginEnd="30dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/Driver"
              app:layout_constraintBottom_toBottomOf="parent"
              />

</androidx.constraintlayout.widget.ConstraintLayout>