<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_car_red"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"

            />

        <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:borderColor="@color/colorPrimary"
            app:borderWidth="2dp"
            app:cornerRadius="8dp"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

        <ss.anoop.awesometextinputlayout.AwesomeTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:borderColor="@color/colorPrimary"
            app:borderWidth="2dp"
            app:cornerRadius="8dp"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_margin="30dp"
            />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>